# nepali-news-rag

./: .gitignore  README.md  main.py  pyproject.toml  scraper.py
backend/: build_index.py  cleaning.py  embeddings.py  main.py  scraper.py
data/: chunk_map.json  embeddings.npy  faiss.index
